--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
   },
   "author": "Manthan Sharma <manthan0908sharma@gmail.com>",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "@types/node": "^22.2.0",
+    "typescript": "^5.5.4"
+  }
 }
