--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format:check": "prettier . --check",
+    "format:fix": "prettier . --write"
   },
   "author": "Manthan Sharma <manthan0908sharma@gmail.com>",
   "license": "ISC",
   "description": "",
   "devDependencies": {
     "@types/node": "^22.2.0",
+    "prettier": "3.3.3",
     "typescript": "^5.5.4"
   }
 }
