--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-    "name": "mern-backend-service",
-    "version": "1.0.0",
-    "main": "index.js",
-    "scripts": {
-        "format:check": "prettier . --check",
-        "format:fix": "prettier . --write",
-        "lint:check": "eslint .",
-        "lint:fix": "eslint . --fix"
-    },
-    "author": "Manthan Sharma <manthan0908sharma@gmail.com>",
-    "license": "ISC",
-    "description": "",
-    "devDependencies": {
-        "@eslint/js": "^9.9.0",
-        "@types/eslint__js": "^8.42.3",
-        "@types/eslint-config-prettier": "^6.11.3",
-        "@types/node": "^22.2.0",
-        "eslint": "^9.9.0",
-        "eslint-config-prettier": "^9.1.0",
-        "prettier": "3.3.3",
-        "typescript": "^5.5.4",
-        "typescript-eslint": "^8.1.0"
-    }
+  "name": "mern-backend-service",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "format:check": "prettier . --check",
+    "format:fix": "prettier . --write",
+    "lint:check": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "prepare": "husky"
+  },
+  "author": "Manthan Sharma <manthan0908sharma@gmail.com>",
+  "license": "ISC",
+  "description": "",
+  "devDependencies": {
+    "@eslint/js": "^9.9.0",
+    "@types/eslint__js": "^8.42.3",
+    "@types/eslint-config-prettier": "^6.11.3",
+    "@types/node": "^22.2.0",
+    "eslint": "^9.9.0",
+    "eslint-config-prettier": "^9.1.0",
+    "husky": "^9.1.4",
+    "prettier": "3.3.3",
+    "typescript": "^5.5.4",
+    "typescript-eslint": "^8.1.0"
+  }
 }
