--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
         "lint:fix": "eslint . --fix",
         "prepare": "husky"
     },
+    "lint-staged": {
+        "*.ts": [
+            "npm run lint:fix",
+            "npm run format:fix"
+        ]
+    },
     "author": "Manthan Sharma <manthan0908sharma@gmail.com>",
     "license": "ISC",
     "description": "",
@@ -20,6 +26,7 @@
         "eslint": "^9.9.0",
         "eslint-config-prettier": "^9.1.0",
         "husky": "^9.1.4",
+        "lint-staged": "^15.2.9",
         "prettier": "3.3.3",
         "typescript": "^5.5.4",
         "typescript-eslint": "^8.1.0"
