--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
         "prettier": "3.3.3",
         "typescript": "^5.5.4",
         "typescript-eslint": "^8.1.0"
+    },
+    "dependencies": {
+        "dotenv": "^16.4.5"
     }
 }
