--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
+        "dev": "nodemon src/server.ts",
         "format:check": "prettier . --check",
         "format:fix": "prettier . --write",
         "lint": "eslint .",
@@ -22,16 +23,20 @@
         "@eslint/js": "^9.9.0",
         "@types/eslint__js": "^8.42.3",
         "@types/eslint-config-prettier": "^6.11.3",
+        "@types/express": "^4.17.21",
         "@types/node": "^22.2.0",
         "eslint": "^9.9.0",
         "eslint-config-prettier": "^9.1.0",
         "husky": "^9.1.4",
         "lint-staged": "^15.2.9",
+        "nodemon": "^3.1.4",
         "prettier": "3.3.3",
+        "ts-node": "^10.9.2",
         "typescript": "^5.5.4",
         "typescript-eslint": "^8.1.0"
     },
     "dependencies": {
-        "dotenv": "^16.4.5"
+        "dotenv": "^16.4.5",
+        "express": "^4.19.2"
     }
 }
