--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@types/eslint-config-prettier": "^6.11.3",
         "@types/express": "^4.17.21",
         "@types/node": "^22.2.0",
+        "@types/winston": "^2.4.4",
         "eslint": "^9.9.0",
         "eslint-config-prettier": "^9.1.0",
         "husky": "^9.1.4",
@@ -37,6 +38,7 @@
     },
     "dependencies": {
         "dotenv": "^16.4.5",
-        "express": "^4.19.2"
+        "express": "^4.19.2",
+        "winston": "^3.14.2"
     }
 }
